got item rendering working properly